--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"ejs": "^2.7.1",
 		"express": "^4.17.1",
 		"express-handlebars": "^3.1.0",
 		"nodemon": "^1.19.2"
