--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"ejs": "^2.7.1",
 		"express": "^4.17.1",
 		"express-handlebars": "^3.1.0",
+		"morgan": "^1.9.1",
 		"nodemon": "^1.19.2"
 	}
 }
